<resources>
    <string name="app_name">safeWatch</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="en_caso_de_no_tener_cuenta_se_creara_automaticamente">En caso de no tener cuenta se creara automaticamente</string>
    <string name="inicie_sesion_con_su_nombre_de_usuario_y_correo">Inicie sesion con su nombre de usuario y correo</string>
    <string name="iniciar_sesin">Iniciar sesión</string>
    <string name="registros_de_alertas">Registros de Alertas</string>
    <string name="safewatch">SafeWatch</string>
    <string name="ejemplo_gmail_com">ejemplo@gmail.com</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="configuraci_n">Configuración</string>
    <string name="minimo_pulso_para_mandar_alerta">Minimo pulso para mandar alerta</string>
    <string name="m_ximo_de_pulso_para_mandar_alerta">Máximo de pulso para mandar alerta</string>
    <string name="minimo_de_aceleraci_n_para_alerta">Minimo de aceleración para alerta</string>
    <string name="solicitar_confirmaci_n_para_alerta_manual">Solicitar confirmación para alerta manual</string>
    <string name="_00">00</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="sin_historial_de_alertas">Sin historial de alertas</string>
</resources>