<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/Nav"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@drawable/nav_background"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/Title"
            tools:ignore="RtlHardcoded"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="20dp"
            android:maxWidth="300dp"
            android:text="@string/safewatch"
            android:textColor="#FFFFFF"
            android:textFontWeight="800"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/log_out"
            tools:ignore="RtlHardcoded"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/exit_to_app_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="bottom"
            android:background="@drawable/nav_separator" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/UserData"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@drawable/bg_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nav"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textFontWeight="500"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Nav"
            app:layout_constraintVertical_bias="0.054" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#DEDEDE"
            android:textFontWeight="500"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Nav"
            app:layout_constraintVertical_bias="0.054" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="600dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserData"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:maxWidth="230dp"
            android:text="@string/configuraci_n"
            android:textColor="#FFFFFE"
            android:textFontWeight="500"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.175"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@+id/heartRateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="150dp">

            <TextView
                android:id="@+id/minHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxWidth="200dp"
                android:text="@string/minimo_pulso_para_mandar_alerta"
                android:textColor="#DEDEDE"
                android:textSize="20sp" />

            <Space
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/minHeartRate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:textColor="#FFFFFF"
                android:hint="@string/_00"
                android:textColorHint="#BDBDBD"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/heartRateRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="70dp">

            <TextView
                android:id="@+id/maxHeart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxWidth="200dp"
                android:text="@string/m_ximo_de_pulso_para_mandar_alerta"
                android:textColor="#DEDEDE"
                android:textSize="20sp" />

            <Space
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/maxHeartRate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:textColor="#FFFFFF"
                android:ems="10"
                android:hint="@string/_00"
                android:textColorHint="#BDBDBD"
                android:textAlignment="center"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accelerateRateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:minHeight="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minAccelerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxWidth="200dp"
                android:text="@string/minimo_de_aceleraci_n_para_alerta"
                android:textColor="#DEDEDE"
                android:textSize="20sp" />

            <Space
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/minAccelerateRate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white"
                android:ems="10"
                android:hint="@string/_00"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#BDBDBD" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmAlertRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:minHeight="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/confirmAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxWidth="200dp"
                android:text="@string/solicitar_confirmaci_n_para_alerta_manual"
                android:textColor="#DEDEDE"
                android:textSize="20sp" />

            <Space
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkBoxAlert"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:buttonTint="#FFFFFF"
                android:layout_weight="1"
                android:scaleY="1.5"
                android:scaleX="1.5"
                android:text=""
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_cambios"
            android:textColor="#FFFFFF"
            android:textFontWeight="600"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="100dp"
            android:paddingHorizontal="15dp"
            android:background="@drawable/circle_btn"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>